15-04-2021 - Denmark Highlighting entities on GUI when sentences are returned.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ excludes=
 file.reference.commons-collections4-4.1.jar=../../Downloads/commons-collections4-4.1.jar
 file.reference.commons-lang3-3.5.jar=../../Downloads/commons-lang3-3.5.jar
 file.reference.freeling.jar=../../FreeLing-4.0/APIs/java/freeling.jar
-file.reference.mysql-connector-java-5.1.40-bin.jar=../../Downloads/mysql-connector-java-5.1.40-bin.jar
+file.reference.mysql-connector-java-8.0.23.jar=../../Downloads/mysql-connector-java-8.0.23/mysql-connector-java-8.0.23.jar
 file.reference.slf4j-api-1.7.21.jar=../../.m2/repository/org/slf4j/slf4j-api/1.7.21/slf4j-api-1.7.21.jar
 file.reference.smile-core-1.2.0.jar=../../.m2/repository/com/github/haifengl/smile-core/1.2.0/smile-core-1.2.0.jar
 file.reference.smile-data-1.2.0.jar=../../.m2/repository/com/github/haifengl/smile-data/1.2.0/smile-data-1.2.0.jar
@@ -44,7 +44,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.freeling.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${file.reference.smile-core-1.2.0.jar}:\
     ${file.reference.slf4j-api-1.7.21.jar}:\
     ${file.reference.smile-data-1.2.0.jar}:\
